--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -195,53 +195,22 @@
 				<div class="footer-area">
 					<div class="container">
 						<div class="row">
-							<div class="col-lg-4 col-md-6">
+							<div class="col-lg-6 col-md-6">
 								<div class="single-footer">
-									<h3 class="footer-title  title-border">Contact Us</h3>
-									<ul class="footer-contact">
-										<li><span>Address :</span>28 Green Tower, Street Name,<br>New York City, USA</li>
-										<li><span>Cell-Phone :</span>012345 - 123456789</li>
-										<li><span>Email :</span>your-email@gmail.com</li>
-									</ul>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-3 col-sm-6">
-								<div class="single-footer">
-									<h3 class="footer-title  title-border">accounts</h3>
+									<h3 class="footer-title title-border">Shop</h3>
 									<ul class="footer-menu">
-										<li><a href="#"><i class="zmdi zmdi-dot-circle"></i>My Account</a></li>
-										<li><a href="#"><i class="zmdi zmdi-dot-circle"></i>My Wishlist</a></li>
-										<li><a href="#"><i class="zmdi zmdi-dot-circle"></i>My Cart</a></li>
-										<li><a href="#"><i class="zmdi zmdi-dot-circle"></i>Sign In</a></li>
-										<li><a href="#"><i class="zmdi zmdi-dot-circle"></i>Check out</a></li>
+										<li><a href="/user/shop"><i class="zmdi zmdi-dot-circle"></i>All Products</a></li>
 									</ul>
 								</div>
 							</div>
-							<div class="col-lg-4 col-md-6">
+							<div class="col-lg-6 col-md-6">
 								<div class="single-footer">
-									<h3 class="footer-title  title-border">your choice Products</h3>
-									<div class="footer-product">
-										<div class="row">
-											<div class="col-sm-6 col-12">
-												<div class="footer-thumb">
-													<a href="#"><img src="img/footer/1.jpg" alt="" /></a>
-													<div class="footer-thumb-info">
-														<p><a href="#">Furniture Product<br>Name</a></p>
-														<h4 class="price-3">$ 60.00</h4>
-													</div>
-												</div>
-											</div>
-											<div class="col-sm-6 col-12">
-												<div class="footer-thumb">
-													<a href="#"><img src="img/footer/1.jpg" alt="" /></a>
-													<div class="footer-thumb-info">
-														<p><a href="#">Furniture Product<br>Name</a></p>
-														<h4 class="price-3">$ 60.00</h4>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
+									<h3 class="footer-title title-border">My Account</h3>
+									<ul class="footer-menu">
+										<li><a href="/user/profile"><i class="zmdi zmdi-dot-circle"></i>My Profile</a></li>
+										<li><a href="/user/wishlist"><i class="zmdi zmdi-dot-circle"></i>My Wishlist</a></li>
+										<li><a href="/user/cart"><i class="zmdi zmdi-dot-circle"></i>My Cart</a></li>
+									</ul>
 								</div>
 							</div>
 						</div>
@@ -252,17 +221,9 @@
 				<div class="copyright-area">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-6">
-								<div class="copyright">
-									<p class="mb-0">&copy; <a href="https://themeforest.net/user/codecarnival/portfolio" target="_blank"> CodeCarnival  </a> 2022. All Rights Reserved.</p>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="payment  text-md-end">
-									<a href="#"><img src="img/payment/1.png" alt="" /></a>
-									<a href="#"><img src="img/payment/2.png" alt="" /></a>
-									<a href="#"><img src="img/payment/3.png" alt="" /></a>
-									<a href="#"><img src="img/payment/4.png" alt="" /></a>
+							<div class="col-md-12">
+								<div class="copyright text-center">
+									<p class="mb-0">&copy; <a href="https://themeforest.net/user/codecarnival/portfolio" target="_blank"> CodeCarnival </a> 2022. All Rights Reserved.</p>
 								</div>
 							</div>
 						</div>
