--- a/views/user/productview.ejs
+++ b/views/user/productview.ejs
@@ -756,20 +756,20 @@
 				<div class="main">
 
 			
-				<div class="heading-banner-area overlay-bg" >
+				<div class="heading-banner-area" style="background-color: #f8f9fa !important; background-image: none !important; padding: 0; border-bottom: 1px solid #eaeaea; margin-top: 20px;">
 					<div class="container">
 						<div class="row">
 							<div class="col-md-12">
-								<div class="heading-banner">
-									<div class="heading-banner-title">
-										<h2>Single Product</h2>
-									</div>
-									<div class="breadcumbs pb-15">
-										<ul>
-											<li><a href="/user">Home</a></li>
-											<li><a href="/user/shop">shop</a></li>
-											<li><a href="/user/shop/<%= product.category %>"><%= product.category %></a></li>
-											<li><%= product.name %></li>
+								<div class="heading-banner" style="padding: 25px 0;">
+									<div class="breadcumbs">
+										<ul style="display: flex; list-style: none; margin: 0; padding: 0; font-size: 15px; align-items: center; justify-content: flex-start;">
+											<li><a href="/user" style="color: #333; text-decoration: none; font-weight: 500; transition: color 0.2s ease;">Home</a></li>
+											<li style="margin: 0 12px; color: #aaa;"><i class="zmdi zmdi-chevron-right" style="font-size: 16px;"></i></li>
+											<li><a href="/user/shop" style="color: #333; text-decoration: none; font-weight: 500; transition: color 0.2s ease;">Shop</a></li>
+											<li style="margin: 0 12px; color: #aaa;"><i class="zmdi zmdi-chevron-right" style="font-size: 16px;"></i></li>
+											<li><a href="/user/shop/<%= product.category %>" style="color: #333; text-decoration: none; font-weight: 500; transition: color 0.2s ease;"><%= product.category %></a></li>
+											<li style="margin: 0 12px; color: #aaa;"><i class="zmdi zmdi-chevron-right" style="font-size: 16px;"></i></li>
+											<li style="color: #007bff; font-weight: 600;"><%= product.name %></li>
 										</ul>
 									</div>
 								</div>
